1-8 movie query and posters are working
still needs responsive elements and styling.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="css/styles.css" />
-  <title>Simple JS App</title>
+  <title>1.8 jQuery and AJAX</title>
 </head>
 
 <body>
 
-  <h1>Star Wars Movies</h1>
+  <h1>Star Wars Movie Posters</h1>
 
   <div class="list-container">
     <ul id="buttons" class="movies"></ul>
