--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
   <h1>Star Wars Movie Posters</h1>
 
   <div class="list-container">
-    <ul id="buttons" class="movies"></ul>
+    <ul id="button" class="movies grid"></ul>
   </div>
 
- 
-
   <div id='modal-container'></div>
-
  
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
+
 </body>
 
 </html>
